(rule
 (alias default)
 (deps
  (alias_rec async_kernel.v0.14.0/all)
  (alias_rec async_rpc_kernel.v0.14.0/all)
  (alias_rec async_unix.v0.14.0/all)
  (alias_rec async.v0.14.0/all)
  (alias_rec base.v0.14.1/all)
  (alias_rec base_bigstring.v0.14.0/all)
  (alias_rec base_quickcheck.v0.14.1/all)
  (alias_rec install))
 (action (progn)))

(rule
 (alias tests)
 (deps
  (alias_rec async_kernel.v0.14.0/runtest)
  (alias_rec async_rpc_kernel.v0.14.0/runtest)
  (alias_rec async_unix.v0.14.0/runtest)
  (alias_rec async.v0.14.0/runtest)
  (alias_rec base.v0.14.1/runtest)
  (alias_rec base_bigstring.v0.14.0/runtest)
  (alias_rec base_quickcheck.v0.14.1/runtest)
  )
 (action (progn)))
