(rule
 (alias default)
 (deps
  (alias_rec async_kernel.v0.14.0/all)
  (alias_rec async_rpc_kernel.v0.14.0/all)
  (alias_rec async_unix.v0.14.0/all)
  (alias_rec async.v0.14.0/all)
  (alias_rec base.v0.14.1/all)
  (alias_rec base_bigstring.v0.14.0/all)
  (alias_rec base_quickcheck.v0.14.1/all)
  (alias_rec bin_prot.v0.14.0/all)
  (alias_rec core.v0.14.1/all)
  (alias_rec core_kernel.v0.14.2/all)
  (alias_rec fieldslib.v0.14.0/all)
  (alias_rec jane-street-headers.v0.14.0/all)
  (alias_rec jst-config.v0.14.1/all)
  (alias_rec ocaml-compiler-libs.v0.12.4/all)
  ;(alias_rec parsexp.v0.14.1/all) ; requires afl-persistent port
  (alias_rec ppx_assert.v0.14.0/all)
  (alias_rec ppx_base.v0.14.0/all)
  (alias_rec ppx_bench.v0.14.1/all)
  (alias_rec ppx_bin_prot.v0.14.0/all)
  (alias_rec ppx_cold.v0.14.0/all)
  (alias_rec ppx_compare.v0.14.0/all)
  (alias_rec ppx_custom_printf.v0.14.1/all)
  (alias_rec ppx_enumerate.v0.14.0/all)
  (alias_rec ppx_expect.v0.14.1/all)
  (alias_rec ppx_fields_conv.v0.14.2/all)
  (alias_rec ppx_fixed_literal.v0.14.0/all)
  (alias_rec ppx_hash.v0.14.0/all)
  (alias_rec ppx_here.v0.14.0/all)
  (alias_rec ppx_inline_test.v0.14.1/all)
  (alias_rec ppx_jane.v0.14.0/all)
  (alias_rec ppx_js_style.v0.14.1/all)
  (alias_rec ppx_let.v0.14.0/all)
  (alias_rec ppx_module_timer.v0.14.0/all)
  (alias_rec ppx_optcomp.v0.14.3/all)
  (alias_rec ppx_optional.v0.14.0/all)
  (alias_rec ppx_pipebang.v0.14.0/all)
  (alias_rec ppx_sexp_conv.v0.14.3/all)
  (alias_rec ppx_sexp_message.v0.14.1/all)
  (alias_rec ppx_sexp_value.v0.14.0/all)
  (alias_rec ppx_stable.v0.14.1/all)
  (alias_rec ppx_string.v0.14.1/all)
  (alias_rec ppx_typerep_conv.v0.14.2/all)
  (alias_rec ppx_variants_conv.v0.14.1/all)
  (alias_rec protocol_version_header.v0.14.0/all)
  (alias_rec sexplib.v0.14.0/all)
  (alias_rec sexplib0.v0.14.0/all)
  (alias_rec spawn.v0.14.0/all)
  (alias_rec splittable_random.v0.14.0/all)
  (alias_rec stdio.v0.14.0/all)
  (alias_rec textutils.v0.14.0/all)
  (alias_rec time_now.v0.14.0/all)
  (alias_rec timezone.v0.14.0/all)
  (alias_rec typerep.v0.14.0/all)
  (alias_rec variantslib.v0.14.0/all)
  (alias_rec install))
 (action (progn)))

(rule
 (alias tests)
 (deps
  (alias_rec async_kernel.v0.14.0/runtest)
  (alias_rec async_rpc_kernel.v0.14.0/runtest)
  (alias_rec async_unix.v0.14.0/runtest)
  (alias_rec async.v0.14.0/runtest)
  (alias_rec base.v0.14.1/runtest)
  (alias_rec base_bigstring.v0.14.0/runtest)
  (alias_rec base_quickcheck.v0.14.1/runtest)
;(alias_rec bin_prot.v0.14.0/runtest)
;inline_tests ok
;(alias_rec core.v0.14.1/runtest)
;inline_tests ok
  (alias_rec core_kernel.v0.14.2/runtest)
;(alias_rec fieldslib.v0.14.0/runtest)
;inline_tests ok
;(alias_rec jane-street-headers.v0.14.0/runtest)
;inline_tests ok
;(alias_rec jst-config.v0.14.1/runtest)
;inline_tests ok
;(alias_rec ocaml-compiler-libs.v0.12.4/runtest)
;inline_tests ok
;(alias_rec parsexp.v0.14.1/runtest)
;inline_tests ok
;(alias_rec ppx_assert.v0.14.0/runtest)
;inline_tests ok
;(alias_rec ppx_base.v0.14.0/runtest)
;inline_tests ok
;(alias_rec ppx_bench.v0.14.1/runtest)
;inline_tests ok
;(alias_rec ppx_bin_prot.v0.14.0/runtest)
;inline_tests ok
;(alias_rec ppx_cold.v0.14.0/runtest)
;inline_tests ok
;(alias_rec ppx_compare.v0.14.0/runtest)
;inline_tests ok
;(alias_rec ppx_custom_printf.v0.14.1/runtest)
;inline_tests ok
;(alias_rec ppx_enumerate.v0.14.0/runtest)
;inline_tests ok
;(alias_rec ppx_expect.v0.14.1/runtest)
;inline_tests ok
;(alias_rec ppx_fields_conv.v0.14.2/runtest)
;inline_tests ok
;(alias_rec ppx_fixed_literal.v0.14.0/runtest)
;inline_tests ok
;(alias_rec ppx_hash.v0.14.0/runtest)
;inline_tests ok
;(alias_rec ppx_here.v0.14.0/runtest)
;inline_tests ok
;(alias_rec ppx_inline_test.v0.14.1/runtest)
;inline_tests ok
;(alias_rec ppx_jane.v0.14.0/runtest)
;inline_tests ok
;(alias_rec ppx_js_style.v0.14.1/runtest)
;inline_tests ok
;(alias_rec ppx_let.v0.14.0/runtest)
;inline_tests ok
;(alias_rec ppx_module_timer.v0.14.0/runtest)
;inline_tests ok
;(alias_rec ppx_optcomp.v0.14.3/runtest)
;inline_tests ok
;(alias_rec ppx_optional.v0.14.0/runtest)
;inline_tests ok
;(alias_rec ppx_pipebang.v0.14.0/runtest)
;inline_tests ok
;(alias_rec ppx_sexp_conv.v0.14.3/runtest)
;inline_tests ok
;(alias_rec ppx_sexp_message.v0.14.1/runtest)
;inline_tests ok
;(alias_rec ppx_sexp_value.v0.14.0/runtest)
;inline_tests ok
;(alias_rec ppx_stable.v0.14.1/runtest)
;inline_tests ok
;(alias_rec ppx_string.v0.14.1/runtest)
;inline_tests ok
;(alias_rec ppx_typerep_conv.v0.14.2/runtest)
;inline_tests ok
;(alias_rec ppx_variants_conv.v0.14.1/runtest)
;inline_tests ok
;(alias_rec protocol_version_header.v0.14.0/runtest)
;inline_tests ok
;(alias_rec sexplib.v0.14.0/runtest)
;inline_tests ok
;(alias_rec sexplib0.v0.14.0/runtest)
;inline_tests ok
;(alias_rec spawn.v0.14.0/runtest)
;inline_tests ok
;(alias_rec splittable_random.v0.14.0/runtest)
;inline_tests ok
;(alias_rec stdio.v0.14.0/runtest)
;inline_tests ok
;(alias_rec textutils.v0.14.0/runtest)
;inline_tests ok
;(alias_rec time_now.v0.14.0/runtest)
;inline_tests ok
;(alias_rec timezone.v0.14.0/runtest)
;inline_tests ok
;(alias_rec typerep.v0.14.0/runtest)
;inline_tests ok
;(alias_rec variantslib.v0.14.0/runtest)
;inline_tests ok
  )
 (action (progn)))
