opam-version: "2.0"
name: "accessor_base"
version: "v0.14.1"
synopsis: "Accessors for Base types, for use with the Accessor library"
description: "This library provides accessors for numerous types in Base."
maintainer: "Jane Street developers"
authors: "Jane Street Group, LLC"
license: "MIT"
homepage: "https://github.com/janestreet/accessor_base"
doc:
  "https://ocaml.janestreet.com/ocaml-core/latest/doc/accessor_base/index.html"
bug-reports: "https://github.com/janestreet/accessor_base/issues"
depends: [
  "ocaml" {>= "4.09.0"}
  "accessor" {>= "v0.14.1" & < "v0.15"}
  "base" {>= "v0.14" & < "v0.15"}
  "higher_kinded" {>= "v0.14.1" & < "v0.15"}
  "ppx_accessor" {>= "v0.14.1" & < "v0.15"}
  "ppx_jane" {>= "v0.14" & < "v0.15"}
  "dune" {>= "2.0.0"}
]
build: ["dune" "build" "-p" name "-j" jobs]
dev-repo: "git+https://github.com/janestreet/accessor_base.git"
url {
  src: "https://github.com/janestreet/accessor_base/archive/v0.14.1.tar.gz"
  checksum: "md5=8a03b18c4ee5c47a832ea457eff67164"
}
