opam-version: "2.0"
name: "core_bench"
version: "v0.14.0"
synopsis: "Benchmarking library"
maintainer: "Jane Street developers"
authors: "Jane Street Group, LLC"
license: "MIT"
homepage: "https://github.com/janestreet/core_bench"
doc:
  "https://ocaml.janestreet.com/ocaml-core/latest/doc/core_bench/index.html"
bug-reports: "https://github.com/janestreet/core_bench/issues"
depends: [
  "ocaml" {>= "4.08.0"}
  "core" {>= "v0.14" & < "v0.15"}
  "core_kernel" {>= "v0.14" & < "v0.15"}
  "ppx_jane" {>= "v0.14" & < "v0.15"}
  "textutils" {>= "v0.14" & < "v0.15"}
  "dune" {>= "2.0.0"}
  "re" {>= "1.8.0"}
]
build: ["dune" "build" "-p" name "-j" jobs]
dev-repo: "git+https://github.com/janestreet/core_bench.git"
url {
  src:
    "https://ocaml.janestreet.com/ocaml-core/v0.14/files/core_bench-v0.14.0.tar.gz"
  checksum: "md5=96c9241f978acbc3a6817b20b281996f"
}
