opam-version: "2.0"
name: "core_extended"
version: "v0.14.0"
synopsis:
  "Extra components that are not as closely vetted or as stable as Core"
description: """\
The Core suite of libraries is an industrial strength alternative to
OCaml's standard library that was developed by Jane Street, the
largest industrial user of OCaml."""
maintainer: "Jane Street developers"
authors: "Jane Street Group, LLC"
license: "MIT"
homepage: "https://github.com/janestreet/core_extended"
doc:
  "https://ocaml.janestreet.com/ocaml-core/latest/doc/core_extended/index.html"
bug-reports: "https://github.com/janestreet/core_extended/issues"
depends: [
  "ocaml" {>= "4.08.0"}
  "core" {>= "v0.14" & < "v0.15"}
  "core_kernel" {>= "v0.14" & < "v0.15"}
  "ppx_jane" {>= "v0.14" & < "v0.15"}
  "dune" {>= "2.0.0"}
  "re" {>= "1.8.0"}
]
build: ["dune" "build" "-p" name "-j" jobs]
dev-repo: "git+https://github.com/janestreet/core_extended.git"
url {
  src:
    "https://ocaml.janestreet.com/ocaml-core/v0.14/files/core_extended-v0.14.0.tar.gz"
  checksum: "md5=00eb9b3ed6b0b02f74a2cf01e4d5827f"
}
