opam-version: "2.0"
name: "notty_async"
version: "v0.14.0"
synopsis: "An Async driver for Notty"
description: """\
Notty is a library for writing graphical terminal applications, and Notty_async
is an Async driver, which makes it easy to build terminal applications using
Async for managing concurrency."""
maintainer: "Jane Street developers"
authors: "Jane Street Group, LLC"
license: "MIT"
homepage: "https://github.com/janestreet/notty_async"
doc:
  "https://ocaml.janestreet.com/ocaml-core/latest/doc/notty_async/index.html"
bug-reports: "https://github.com/janestreet/notty_async/issues"
depends: [
  "ocaml" {>= "4.08.0"}
  "async" {>= "v0.14" & < "v0.15"}
  "ppx_jane" {>= "v0.14" & < "v0.15"}
  "dune" {>= "2.0.0"}
  "notty" {>= "0.2.1"}
]
build: ["dune" "build" "-p" name "-j" jobs]
dev-repo: "git+https://github.com/janestreet/notty_async.git"
url {
  src:
    "https://ocaml.janestreet.com/ocaml-core/v0.14/files/notty_async-v0.14.0.tar.gz"
  checksum: "md5=ca7ab7750e950e4257149b679b8ba16f"
}
