opam-version: "2.0"
name: "patdiff"
version: "v0.14.0"
synopsis: "File Diff using the Patience Diff algorithm"
maintainer: "Jane Street developers"
authors: "Jane Street Group, LLC"
license: "MIT"
homepage: "https://github.com/janestreet/patdiff"
doc: "https://ocaml.janestreet.com/ocaml-core/latest/doc/patdiff/index.html"
bug-reports: "https://github.com/janestreet/patdiff/issues"
depends: [
  "ocaml" {>= "4.08.0"}
  "core" {>= "v0.14" & < "v0.15"}
  "core_kernel" {>= "v0.14" & < "v0.15"}
  "patience_diff" {>= "v0.14" & < "v0.15"}
  "ppx_jane" {>= "v0.14" & < "v0.15"}
  "dune" {>= "2.0.0"}
  "pcre"
  "re" {>= "1.8.0"}
]
build: ["dune" "build" "-p" name "-j" jobs]
dev-repo: "git+https://github.com/janestreet/patdiff.git"
url {
  src:
    "https://ocaml.janestreet.com/ocaml-core/v0.14/files/patdiff-v0.14.0.tar.gz"
  checksum: "md5=12319e1918cf37f2800fd5aef272b398"
}
