opam-version: "2.0"
name: "patience_diff"
version: "v0.14.0"
synopsis: "Diff library using Bram Cohen's patience diff algorithm"
maintainer: "Jane Street developers"
authors: "Jane Street Group, LLC"
license: "MIT"
homepage: "https://github.com/janestreet/patience_diff"
doc:
  "https://ocaml.janestreet.com/ocaml-core/latest/doc/patience_diff/index.html"
bug-reports: "https://github.com/janestreet/patience_diff/issues"
depends: [
  "ocaml" {>= "4.08.0"}
  "base" {>= "v0.14" & < "v0.15"}
  "core_kernel" {>= "v0.14" & < "v0.15"}
  "ppx_jane" {>= "v0.14" & < "v0.15"}
  "dune" {>= "2.0.0"}
]
build: ["dune" "build" "-p" name "-j" jobs]
dev-repo: "git+https://github.com/janestreet/patience_diff.git"
url {
  src:
    "https://ocaml.janestreet.com/ocaml-core/v0.14/files/patience_diff-v0.14.0.tar.gz"
  checksum: "md5=e04e7e9da45352706498f380e66b9f5e"
}
