opam-version: "2.0"
name: "shell"
version: "v0.14.0"
synopsis: "Yet another implementation of fork&exec and related functionality"
description:
  "This library is a relatively featureful and flexible implementation of fork&exec with related functionality, including some basic support for asynchronous I/O. This is an old and unmaintained code. New users are advised to try using [Async.Process] for certain use cases and [Shexp_process] for certain other use cases."
maintainer: "Jane Street developers"
authors: "Jane Street Group, LLC"
license: "MIT"
homepage: "https://github.com/janestreet/shell"
doc: "https://ocaml.janestreet.com/ocaml-core/latest/doc/shell/index.html"
bug-reports: "https://github.com/janestreet/shell/issues"
depends: [
  "ocaml" {>= "4.08.0"}
  "core" {>= "v0.14" & < "v0.15"}
  "core_kernel" {>= "v0.14" & < "v0.15"}
  "jst-config" {>= "v0.14" & < "v0.15"}
  "ppx_jane" {>= "v0.14" & < "v0.15"}
  "textutils" {>= "v0.14" & < "v0.15"}
  "dune" {>= "2.0.0"}
  "spawn" {>= "v0.12"}
]
build: ["dune" "build" "-p" name "-j" jobs]
depexts: ["linux-headers"] {os-distribution = "alpine"}
dev-repo: "git+https://github.com/janestreet/shell.git"
url {
  src:
    "https://ocaml.janestreet.com/ocaml-core/v0.14/files/shell-v0.14.0.tar.gz"
  checksum: "md5=a91101aef477f2bd563c24f218ae0bd3"
}
