opam-version: "2.0"
name: "topological_sort"
version: "v0.14.0"
synopsis: "Topological sort algorithm"
description: """\
Topological_sort is a single-module library that implements a simple
topological-sort algorithm."""
maintainer: "Jane Street developers"
authors: "Jane Street Group, LLC"
license: "MIT"
homepage: "https://github.com/janestreet/topological_sort"
doc:
  "https://ocaml.janestreet.com/ocaml-core/latest/doc/topological_sort/index.html"
bug-reports: "https://github.com/janestreet/topological_sort/issues"
depends: [
  "ocaml" {>= "4.07.0"}
  "base" {>= "v0.14" & < "v0.15"}
  "ppx_jane" {>= "v0.14" & < "v0.15"}
  "stdio" {>= "v0.14" & < "v0.15"}
  "dune" {>= "2.0.0"}
]
build: ["dune" "build" "-p" name "-j" jobs]
dev-repo: "git+https://github.com/janestreet/topological_sort.git"
url {
  src:
    "https://ocaml.janestreet.com/ocaml-core/v0.14/files/topological_sort-v0.14.0.tar.gz"
  checksum: "md5=56809cb506f8ddd14d7e18f8c29857cf"
}
