opam-version: "2.0"
name: "zarith_stubs_js"
version: "v0.14.0"
synopsis: "Javascripts stubs for the Zarith library"
description: """\
This library contains no ocaml code, but instead implements
all of the Zarith C stubs in Javascript for use in Js_of_ocaml"""
maintainer: "Jane Street developers"
authors: "Jane Street Group, LLC"
license: "MIT"
homepage: "https://github.com/janestreet/zarith_stubs_js"
doc:
  "https://ocaml.janestreet.com/ocaml-core/latest/doc/zarith_stubs_js/index.html"
bug-reports: "https://github.com/janestreet/zarith_stubs_js/issues"
depends: [
  "ocaml" {>= "4.04.2"}
  "dune" {>= "2.0.0"}
]
build: ["dune" "build" "-p" name "-j" jobs]
dev-repo: "git+https://github.com/janestreet/zarith_stubs_js.git"
url {
  src:
    "https://ocaml.janestreet.com/ocaml-core/v0.14/files/zarith_stubs_js-v0.14.0.tar.gz"
  checksum: "md5=f7f0dcab17c5e630e2965d4550d649fe"
}
