(library (name expect_test_negative_tests) (libraries core)
 (preprocess (pps ppx_jane)))

(rule
 (enabled_if false)
 (deps (:first_dep ./inline_tests_runner) ./inline_tests_runner.exe
  (glob_files *.ml))
 (targets glob.ml.corrected exn.ml.corrected exn_missing.ml.corrected
  exn_and_trailing.ml.corrected regexp.ml.corrected exact.ml.corrected
  spacing.ml.corrected trailing.ml.corrected missing.ml.corrected
  tag.ml.corrected string_padding.ml.corrected semicolon.ml.corrected
  flexible.ml.corrected normal_strings.ml.corrected
  pending_output.ml.corrected functor.ml.corrected
  function_with_distinct_outputs.ml.corrected test-output)
 (action
  (bash
   "rm -f *.ml.corrected 2>/dev/null; ! %{first_dep} -diff-cmd true -allow-output-patterns 2> test-output")))

(alias (name runtest) (enabled_if false) (deps exn.ml.corrected.expected exn.ml.corrected)
 (action (bash "diff -a %{deps}")))

(alias (name runtest) (enabled_if false)
 (deps exn_missing.ml.corrected.expected exn_missing.ml.corrected)
 (action (bash "diff -a %{deps}")))

(alias (name runtest) (enabled_if false)
 (deps exn_and_trailing.ml.corrected.expected exn_and_trailing.ml.corrected)
 (action (bash "diff -a %{deps}")))

(alias (name runtest) (enabled_if false) (deps glob.ml.corrected.expected glob.ml.corrected)
 (action (bash "diff -a %{deps}")))

(alias (name runtest) (enabled_if false) (deps regexp.ml.corrected.expected regexp.ml.corrected)
 (action (bash "diff -a %{deps}")))

(alias (name runtest) (enabled_if false) (deps exact.ml.corrected.expected exact.ml.corrected)
 (action (bash "diff -a %{deps}")))

(alias (name runtest) (enabled_if false)
 (deps spacing.ml.corrected.expected spacing.ml.corrected)
 (action (bash "diff -a %{deps}")))

(alias (name runtest) (enabled_if false)
 (deps trailing.ml.corrected.expected trailing.ml.corrected)
 (action (bash "diff -a %{deps}")))

(alias (name runtest) (enabled_if false)
 (deps missing.ml.corrected.expected missing.ml.corrected)
 (action (bash "diff -a %{deps}")))

(alias (name runtest) (enabled_if false)
 (deps semicolon.ml.corrected.expected semicolon.ml.corrected)
 (action (bash "diff -a %{deps}")))

(alias (name runtest) (enabled_if false) (deps tag.ml.corrected.expected tag.ml.corrected)
 (action (bash "diff -a %{deps}")))

(alias (name runtest) (enabled_if false)
 (deps string_padding.ml.corrected.expected string_padding.ml.corrected)
 (action (bash "diff -a %{deps}")))

(alias (name runtest) (enabled_if false)
 (deps flexible.ml.corrected.expected flexible.ml.corrected)
 (action (bash "diff -a %{deps}")))

(alias (name runtest) (enabled_if false)
 (deps normal_strings.ml.corrected.expected normal_strings.ml.corrected)
 (action (bash "diff -a %{deps}")))

(alias (name runtest) (enabled_if false)
 (deps pending_output.ml.corrected.expected pending_output.ml.corrected)
 (action (bash "diff -a %{deps}")))

(alias (name runtest) (enabled_if false)
 (deps functor.ml.corrected.expected functor.ml.corrected)
 (action (bash "diff -a %{deps}")))

(alias (name runtest) (enabled_if false)
 (deps function_with_distinct_outputs.ml.corrected.expected
  function_with_distinct_outputs.ml.corrected)
 (action (bash "diff -a %{deps}")))

(alias
(name runtest) (enabled_if false)
(deps test-output.expected test-output)
 (action (bash "diff -a %{deps}")))
